# bad-web-server

./: CMakeLists.txt  README.md  main.cpp
httplib/: Handler.cpp  Handler.h  Http.cpp  Http.h  Request.cpp  Request.h  Url.cpp  Url.h  httplib.h
tcplib/: Conn.cpp  Conn.h  Socket.cpp  Socket.h  tcplib.h
